force-app/main/default/objects/Organization_Job_Code_Mapping__c/Organization_Job_Code_Mapping__c.object-meta.xml
<CustomObject>
    <label>Master Job Category</label>
    <nameField>
        <displayFormat>MJC-{00000}</displayFormat>
        <label>Master Job ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Master Job Categories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>