force-app/main/default/objects/Organization_Job_Code_Mapping__c/fields/Job_Category_Group__c.field-meta.xml
<CustomField>
    <fullName>Job_Category_Group__c</fullName>
    <label>Job Category</label>
    <length>40</length>
    <type>Text</type>
</CustomField>