force-app/main/default/objects/Organization_Job_Code_Mapping__c/fields/Job_Code__c.field-meta.xml
<CustomField>
    <fullName>Job_Code__c</fullName>
    <externalId>true</externalId>
    <label>Job Code</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>