force-app/main/default/objects/Organization_Job_Code_Mapping__c/fields/Sub_Group__c.field-meta.xml
<CustomField>
    <fullName>Sub_Group__c</fullName>
    <label>Job Sub Category</label>
    <length>40</length>
    <type>Text</type>
</CustomField>